Update to full screen

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>哟</title>
+  <title>niuwr.com</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <img src="yo.gif" alt="哟">
+  <div class="gif-container">
+    <img src="yo.gif" alt="哟">
+  </div>
 </body>
 </html>
